@@ -3,7 +3,7 @@
     "author": "thesixthroc",
     "version": "1.4.3",
     "title": "Inverted Quality (Beta)",
-    "description": "Inverts the Quality system to negative tiers (positive tiers are removed).\n\nCrafting items has a two-thirds chance to reduce their quality by one tier. Items in the lowest tier are nonfunctional.\n\nThe new Downgrade Port allows high-quality items to be used in low-quality recipes, and the Meltdown Facility allows the melting down of low-quality items back into Normal base materials.\n\nMap sliders for higher resources are recommended when playing this mod.",
+    "description": "Inverts the Quality system to negative tiers (positive tiers are removed).\n\nCrafting items has a two-thirds chance to reduce their quality by one tier. Items in the lowest tier are nonfunctional.\n\nThe new Downgrade Port allows high-quality items to be used in low-quality recipes, and the Meltdown Facility allows the melting down of low-quality items back into Normal base materials.\n\nMap sliders for higher resources are recommended.",
     "contact": "Discord: thesixthroc",
     "factorio_version": "2.0",
     "quality_required": true,
