@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.3
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed that big electric poles had no supply area at any quality.
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.2
 Date: 2025-06-06
